--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-row-predicate.reel/table-row-predicate.html
@@ -26,6 +26,7 @@
                 ]
             },
             "bindings": {
+                "disabled": {"<-": "@owner.object._disabled"},
                 "selectedValue": {"<->": "@owner.object.property"}
             }
         },
