--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -103,8 +103,7 @@
             "bindings": {
                 "displayedPeriodLabel": {"<->": "@owner.displayedPeriodLabel"},
                 "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
-                "selectedTask": {"<->":"@owner.selectedTask"},
-                "selectedDay": {"<->":"@owner.selectedDay"}
+                "selectedTask": {"<->":"@owner.selectedTask"}
             }
         },
         "weekView": {
@@ -117,7 +116,8 @@
                 "events": {"<-": "@owner.tasks"},
                 "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
                 "selectedTask": {"<->":"@owner.selectedTask"},
-                "selectedDay": {"<->":"@owner.selectedDay"}
+                "selectedDay": {"<->":"@owner.selectedDay"},
+                "gmtOffset": {"<-": "@owner.object._gmtOffset"}
             }
         },
         "dayView": {
@@ -130,7 +130,8 @@
                 "events": {"<-": "@owner.tasks"},
                 "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
                 "selectedTask": {"<->":"@owner.selectedTask"},
-                "selectedDay": {"<->":"@owner.selectedDay"}
+                "selectedDay": {"<->":"@owner.selectedDay"},
+                "gmtOffset": {"<-": "@owner.object._gmtOffset"}
             }
         },
         "taskFilter": {
