--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -103,7 +103,8 @@
             "bindings": {
                 "displayedPeriodLabel": {"<->": "@owner.displayedPeriodLabel"},
                 "taskCategories": {"<-": "@owner.taskCategories.filter{checked}"},
-                "selectedTask": {"<->":"@owner.selectedTask"}
+                "selectedTask": {"<->":"@owner.selectedTask"},
+                "selectedDay": {"<->":"@owner.selectedDay"}
             }
         },
         "weekView": {
