--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -112,6 +112,14 @@
                 "classList.has('hide')": {"<-": "!!@owner.object._isDetached"}
             }
         },
+        "replications": {
+            "prototype": "ui/controls/inspector-option.reel",
+            "properties": {
+                "element": {"#": "replications"},
+                "name": "Replications",
+                "objectType": "Replication"
+            }
+        },
         "volumeIcon": {
             "prototype": "ui/icons/volume.reel",
             "properties": {
@@ -171,6 +179,7 @@
             <div data-montage-id="snapshots"></div>
             <div data-montage-id="topology"></div>
             <div data-montage-id="datasets"></div>
+            <div data-montage-id="replications"></div>
             <div data-montage-id="encryptionActions"></div>
             <div data-arg="footer-additional-button" class="ActionButtons">
                 <div data-montage-id="export"></div>
