ADDED: limit predicate to 2 rows

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-container-default-header.reel/table-container-default-header.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-container-default-header.reel/table-container-default-header.html
@@ -17,7 +17,7 @@
                 "element": {"#": "addButton"}
             },
             "bindings": {
-                "disabled": {"<-": "@owner.table.isAddingNewEntry"}
+                "disabled": {"<-": "@owner.table.isAddingNewEntry || @owner.table.rows.length >= 2"}
             }
         },
 
