Move extras libs to /vendors

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <script src="node_modules/montage/montage.js" async></script>
     <script src="node_modules/d3/d3.min.js"></script>
     <script src="node_modules/plottable/plottable.js" defer></script>
-    <script src="core/extras/jquery-1.12.4.min.js" charset="utf-8"></script>
+    <script src="vendors/jquery-1.12.4.min.js" charset="utf-8"></script>
     <script src="node_modules/maphilight/jquery.maphilight.js" charset="utf-8" ></script>
-    <script src="core/extras/timezone-picker.js" charset="utf-8" defer></script>
+    <script src="vendors/timezone-picker.js" charset="utf-8" defer></script>
     <script type="text/montage-serialization">
     {
         "owner": {
