--- a/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/task-notification.reel/task-notification.html
@@ -18,7 +18,8 @@
                 "classList.has('has-error')": {"<-": "@owner.object.state == 'FAILED'"},
                 "classList.has('has-warning')": {"<-": "@owner.object.warnings.length > 0"},
                 "classList.has('has-success')": {"<-": "@owner.object.state == 'FINISHED'"},
-                "classList.has('hide')": {"<-": "@owner.isExpired"}
+                "classList.has('is-expired')": {"<-": "@owner.isExpired"},
+                "classList.has('hide')": {"<-": "@owner.isHidden"}
             }
         },
         "taskSummary": {
