removed tracked css files

--- a/ui/sections/storage/inspectors/replication.reel/replication-status.reel/replication-status.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication-status.reel/replication-status.html
@@ -33,7 +33,7 @@
                 "label": "Progress"
             },
             "bindings": {
-                "value": {"<-": "@owner.object.progress"}
+                "value": {"<-": "@owner.object.progress + ' %'"}
             }
         },
         "speed": {
