--- a/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
+++ b/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
@@ -88,7 +88,8 @@
             "properties": {
                 "element": {"#": "datasetSelector"},
                 "controller": {"@": "datasetTreeController"},
-                "label": "Dataset"
+                "label": "Dataset",
+                "allowPathInput": true
             },
             "bindings": {
                 "selectedPath": {"<->": "@owner.object.dataset"}
