--- a/ui/sections/storage/inspectors/share.reel/webdav-share.reel/webdav-share.html
+++ b/ui/sections/storage/inspectors/share.reel/webdav-share.reel/webdav-share.html
@@ -32,7 +32,7 @@
                 "label": "Recursively change user and group ownership"
             },
             "bindings": {
-                "checked": {"<->": "@owner.properties.permissions"}
+                "checked": {"<->": "@owner.properties.permission"}
             }
         },
 
