--- a/ui/controls/cascading-list.reel/cascading-list.html
+++ b/ui/controls/cascading-list.reel/cascading-list.html
@@ -35,7 +35,8 @@
             "prototype": "blue-shark/ui/scrollview.reel",
             "properties": {
                 "element": {"#": "horizontalScroll"},
-                "overflow": "scrollX"
+                "overflow": "scrollX",
+                "minHeight": true
             }
         }
     }
