Fix smart args Disks label

--- a/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
+++ b/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
@@ -21,7 +21,7 @@
             "prototype": "blue-shark/ui/field-select-multiple.reel",
             "properties": {
                 "element": {"#": "disks"},
-                "label": "Volume",
+                "label": "Disks",
                 "converter": {"@": "optionConverter"}
             },
             "bindings": {
