edits task styles to not leave trailing border when automatically hidden

--- a/ui/dashboard/notifications.reel/notification.reel/notification.html
+++ b/ui/dashboard/notifications.reel/notification.reel/notification.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Notification">
-        <div data-montage-id="notificationType">
+        <div data-montage-id="notificationType" class="Notification-placeholder">
             <div data-montage-id="taskNotification" data-arg="Task"></div>
             <div data-montage-id="alertNotification" data-arg="Alert"></div>
         </div>
