subtitle should truncate when too long

--- a/ui/controls/inspector-section-title.reel/inspector-section-title.html
+++ b/ui/controls/inspector-section-title.reel/inspector-section-title.html
@@ -35,7 +35,9 @@
 <body>
     <div data-montage-id="owner" class="InspectorSectionTitle">
         <div data-montage-id="title" class="InspectorSectionTitle-title"></div>
-        <div data-montage-id="subtitle" class="InspectorSectionTitle-subtitle"></div>
+        <div class="InspectorSectionTitle-subtitle-wrapper">
+            <div data-montage-id="subtitle" class="InspectorSectionTitle-subtitle"></div>
+        </div>
     </div>
 </body>
 </html>
