removes unused binding

--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -49,8 +49,7 @@
             "bindings": {
                 "moduleId": {"<-": "@owner.inspectorComponentModuleId"},
                 "object": {"<-": "@owner.data.object"},
-                "context": {"<-": "@owner.data"},
-                "classList.has('Inspector-scroll')": {"<-": "@owner.inspectorComponentModuleId != 'ui/controls/viewer.reel'"}
+                "context": {"<-": "@owner.data"}
             }
         },
         "scrollview": {
