--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="VirtualMachineReadme">
-        <div data-montage-id="readmeTextArea"></div>
+        <div data-montage-id="readmeTextArea" spellcheck="false"></div>
     </div>
 </body>
 </html>
