--- a/ui/sections/containers/inspectors/docker-network.reel/docker-network.html
+++ b/ui/sections/containers/inspectors/docker-network.reel/docker-network.html
@@ -54,7 +54,7 @@
                 "label": "Host"
             },
             "bindings": {
-                "options": {"<-": "[{label: 'default', value: null}].concat(@owner._availablesDockers)"},
+                "options": {"<-": "[{label: '---', value: null}].concat(@owner._availablesDockers)"},
                 "selectedValue": {"<->": "@owner.object.host"}
             }
         },
