fixed smb share regressions

--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -19,7 +19,7 @@
                 "targetTreeview": {"@": "target_path"}
             },
             "bindings": {
-                "volumePath": {"<-": "'/mnt/' + @owner._volume.id"}
+                "volumePath": {"<-": "'/mnt/' + @owner.object._volume.id"}
             }
         },
         "datasetTreeController": {
